--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,8 +1,31 @@
+@import "../../styles/variables.css";
+
 html, body {
-    margin: 0;
-    padding: 0;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
-app {
+.app {
   display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: stretch;
+  flex-grow: 1;
+
+  min-height: 100%;
+  background-color: $color-app-bg;
+
+  &__header {
+   }
+
+  &__content {
+     flex-grow: 2;
+     position: relative;
+   }
+
+  &__footer {
+     margin-top: 10px;
+   }
 }
