--- a/src/styles/mixins.css
+++ b/src/styles/mixins.css
@@ -1,7 +1,7 @@
-@mixin background-image($url, $size) {
+@define-mixin background-image $url, $size {
   height: $size;
   width: $size;
-  background-image: url("/img/#{$url}");
+  background-image: url($url);
   background-position: center;
   background-repeat: no-repeat;
   background-size: $size $size;
